--- a/packages/themes/src/RealEstate/containers/Welcome/style.css
+++ b/packages/themes/src/RealEstate/containers/Welcome/style.css
@@ -4,6 +4,26 @@
 }
 #btn-welcome-mobile {
   display: inline-block;
+  position: relative;
+  display: inline-block;
+  margin: 32px 0px 0px;
+  font-style: inherit;
+  font-variant: inherit;
+  font-stretch: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  user-select: none;
+  border: none;
+  outline: 0px;
+  font-family: Jost, sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
+  white-space: nowrap;
+  transition: all 0.2s ease-in-out 0s;
+  color: rgb(38, 37, 34);
+  background-color: rgb(124, 162, 174);
+  padding: 20px 48px;
 }
 
 @media only screen and (min-width: 1100px) {
